<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GridBGColor"
    android:orientation="vertical"
    tools:context="com.example.appjam2014.WantActivity" >

    <TextView
        android:id="@+id/Instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:text="@string/MySentenceLabel"
        android:textSize="15sp"
        android:textStyle="bold" />


        <Button
            android:id="@+id/INeedSomethingButton"
            style="@style/NextButtonText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/nextbutton"
            android:text="@string/INeedSomethingLabel" />

        <Button
            android:id="@+id/IWantToEatButton"
            style="@style/NextButtonText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/nextbutton"
            android:text="@string/IWantToEatLabel" />

        <Button
            android:id="@+id/IWantToDoButton"
            style="@style/NextButtonText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/nextbutton"
            android:text="@string/IWantToDoLabel" />

</LinearLayout>