<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/EndBGColor"
    tools:context="com.example.appjam2014.EndActivity" >
    
    <TextView
        android:id="@+id/MySentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:text="@string/MySentenceLabel"
        android:textSize="17sp" />

    <!-- need to add sentence -->

    <Button
        android:id="@+id/SayButton"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bluebutton"
        android:text="@string/SayLabel" />

    <Button
        android:id="@+id/AgainButton"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/greenbutton"
        android:text="@string/AgainLabel" />

</LinearLayout>